Team-B/cluster_config/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-us-namespace
spec:
  finalizers:
    - foregroundDeletion
