Team-B/cluster_config/weather-us-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-us-route
  namespace: weather-us-namespace
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: eu1-dev-aks-1.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /us(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: weather-us-service
                port:
                  number: 80
